# transferable-context-aware-vr

./: .gitignore  README.md
literature/presentations/presentation 1/: introduction.tex
openvrsimplexamples-master/: CMakeLists.txt
presentations/presentation 1/: introduction.aux  introduction.nav  introduction.snm  introduction.tex
presentations/presentation 2/: introduction.aux  introduction.nav  introduction.snm  introduction.tex
test_mqtt/mqtt/: async_client.h
vr_subscriber/: HTC_Vive_Headset.mtl  broker.py  main.py  publisher.py  requirements.txt  subscriber.py  test.py  vive.mtl
vr_tracking/: CMakeLists.txt
vr_tracking/tracking/: CMakeLists.txt  main.cpp  mqtt.sh  utils.cpp  utils.h
